--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -193,14 +193,14 @@ jobs:
         run: sleep 15
 
       - name: Fetch and display local JSON response
-        run: curl -s http://0.0.0.0:8080/roadworks?roadId=A99
+        run: curl -s http://backend:8080/roadworks?roadId=A99
 
       - name: Fetch and display remote JSON response
         run: curl -s https://verkehr.autobahn.de/o/autobahn/A99/services/roadworks
 
       - name: Fetch and compare JSON responses
         run: |
-          local_response=$(curl -s http://0.0.0.0:8080/roadworks?roadId=A99)
+          local_response=$(curl -s http://backend:8080/roadworks?roadId=A99)
           remote_response=$(curl -s https://verkehr.autobahn.de/o/autobahn/A99/services/roadworks)
 
           if [ "$local_response" = "$remote_response" ]; then
