--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -192,8 +192,11 @@ jobs:
       - name: Wait for services to start
         run: sleep 15
 
+      - name: Show Running Containers
+        run: docker ps
+
       - name: Fetch and display local JSON response
-        run: curl -s http://backend:8080/roadworks?roadId=A99
+        run: curl -s http://localhost:8080/roadworks?roadId=A99
 
       - name: Fetch and display remote JSON response
         run: curl -s https://verkehr.autobahn.de/o/autobahn/A99/services/roadworks
