--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -78,7 +78,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.8</version>
+				<version>0.8.8</version> <!-- Aktuelle Version einfügen -->
 				<executions>
 					<execution>
 						<goals>
@@ -93,7 +93,13 @@
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<excludes>
+						<exclude>com/sqs_maier/SqsMaierApplication.java</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
 
