--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,8 @@
     "socket.io-client": "^4.7.0",
     "styled-components": "^5.3.6",
     "validator": "^13.7.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ws": "^8.17.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -44,6 +45,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "prettier": "2.8.8",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "ws": "^8.17.1"
   }
 }
