--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "react-scripts test --watchAll --coverage"
   },
   "dependencies": {
     "@emotion/cache": "^11.10.5",
@@ -37,7 +38,10 @@
     "styled-components": "^5.3.6",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4",
-    "ws": "^8.17.1"
+    "ws": "^8.17.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
