--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectVersion=1.0
 
 sonar.sources=src
 sonar.tests=src
-sonar.test.inclusions=**/*.test.tsx
+sonar.test.inclusions=src/tests/LandingPage.test.tsx
 
 sonar.sourceEncoding=UTF-8
 
