--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -78,7 +78,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.8</version> <!-- Aktuelle Version einfügen -->
+				<version>0.8.8</version>
 				<executions>
 					<execution>
 						<goals>
@@ -95,7 +95,7 @@
 				</executions>
 				<configuration>
 					<excludes>
-						<exclude>com/sqs_maier/SqsMaierApplication.java</exclude>
+						<exclude>src/main/java/com/sqs_maier/SqsMaierApplication.java</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
