--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -77,7 +77,7 @@ jobs:
         run: npx sonar-scanner -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=${{ secrets.SONAR_TOKEN }} -Dsonar.javascript.lcov.reportPaths=/frontend/coverage/lcov.info
 
       - name: Prepare lowercase variables
-        run: echo "LOWER_REPO_NAME=${{ github.repository | lower }}" >> $GITHUB_ENV
+        run: echo "LOWER_REPO_NAME=$(echo $GITHUB_REPOSITORY | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
